# bluetooth_bridge

./: README.md
bluetooth_bridge/: CMakeLists.txt  package.xml  setup.py
bluetooth_bridge/config/: repaired_init.py  ros_navigation_topics.yaml
bluetooth_bridge/launch/: bluetooth_bridge.launch
bluetooth_bridge/nodes/: bidirectional_serial_node.py
bluetooth_bridge/scripts/: enable_bluetooth.bash  make_invisible.bash  make_visible.bash  repair_pybluez.bash
bluetooth_bridge/src/bluetooth_bridge/: __init__.py  bidirectional_node.py
bluetooth_port_manager/: .port_manager.py.swp  CMakeLists.txt  README.md  package.xml  port_manager.py  setup.py
bluetooth_port_manager/src/bluetooth_port_manager/: __init__.py  bluetooth_port_manager.py
bluetooth_port_manager/src/bluetooth_port_manager/config/: whitelist.yaml
bluetooth_setup/: README.md  scratch.py
bluetooth_setup/scripts/: bind_address.sh  disable_bluetooth_visibility.sh  enable_bluetooth_visibility.sh
serial_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
serial_bridge/config/: demo_topics.yaml
serial_bridge/launch/: port_manager_interface.launch  serial_bridge.launch
serial_bridge/msg/: Time.msg
serial_bridge/nodes/: bidirectional_serial_node.py  port_manager_interface.py
serial_bridge/scripts/: demo_publishers.sh
serial_bridge/src/serial_bridge/: .bidirectional_node.py.swp  __init__.py  bidirectional_node.py
