<package>
  <name>bluetooth_port_manager</name>
  <version>0.0.1</version>
  <description>
      A Python-based, bluetooth scanner that mutually coordinates serial connections between bluetooth devices. 
  </description>
  <author>Max Svetlik</author>
  <maintainer email="maxsvetlik@utexas.edu">Max Svetlik</maintainer>
  <license>BSD</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
